fixed edit page sidebar placement, details page forms aligning at the top w/o extra space and other css styling

--- a/hypothetical_transportation/frontend/src/components/adminPage/adminPage.css
+++ b/hypothetical_transportation/frontend/src/components/adminPage/adminPage.css
@@ -77,11 +77,11 @@
 }
 
 .admin-edit-page {
-  height: 150vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   gap: 100px;
 }
 
@@ -106,8 +106,7 @@
 .admin-details {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding-top: 200px;
+  justify-content: top;
   align-items: center;
   gap: 20px;
 }
